welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
for (c<- 0 to 15 )
      ^