welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
for (c<- 0 to 15 )
{
	avance();
	if (getCouleurSol()==Color.green)
	{
		avance();// Write your code here
	}
	else
	{
		recule();
		gauche();
		avance();
	}
}
}        
